[gd_scene load_steps=5 format=3 uid="uid://b2h8ok8yfc7wb"]

[ext_resource type="Script" path="res://addons/silent_wolf/Scores/Leaderboard.gd" id="1"]
[ext_resource type="Theme" uid="uid://d2eakbmaefnt6" path="res://addons/silent_wolf/assets/themes/sw_theme.tres" id="2_ixaq4"]
[ext_resource type="PackedScene" uid="uid://clllbf6am8qdf" path="res://addons/silent_wolf/common/SWButton.tscn" id="4"]

[sub_resource type="Theme" id="Theme_j1gah"]

[node name="Leaderboard" type="Node2D"]
script = ExtResource("1")

[node name="OldBoard" type="MarginContainer" parent="."]
visible = false

[node name="HighScores" type="TextureRect" parent="OldBoard"]
layout_mode = 2

[node name="Board" type="VBoxContainer" parent="."]
offset_left = 232.0
offset_top = 3.0
offset_right = 1738.0
offset_bottom = 1070.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_ixaq4")
theme_override_constants/separation = 48
alignment = 1

[node name="TitleContainer" type="CenterContainer" parent="Board"]
layout_mode = 2

[node name="Label" type="Label" parent="Board/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Leaderboard"
horizontal_alignment = 1

[node name="MessageContainer" type="CenterContainer" parent="Board"]
visible = false
layout_mode = 2

[node name="TextMessage" type="Label" parent="Board/MessageContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Loading scores..."

[node name="HighScores" type="CenterContainer" parent="Board"]
layout_mode = 2
theme = SubResource("Theme_j1gah")

[node name="ScoreItemContainer" type="VBoxContainer" parent="Board/HighScores"]
layout_mode = 2

[node name="CloseButtonContainer" type="CenterContainer" parent="Board"]
layout_mode = 2

[node name="CloseButton" parent="Board/CloseButtonContainer" instance=ExtResource("4")]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Close Leaderboard"

[connection signal="pressed" from="Board/CloseButtonContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
